fix: input elements overflowing

--- a/src/components/Dialog/Dialog.module.scss
+++ b/src/components/Dialog/Dialog.module.scss
@@ -21,7 +21,6 @@
         box-shadow: var(--box-shadow);
         width: min(90vw, 44rem);
         max-height: calc(100vh - 4rem);
-        overflow-y: auto;
         z-index: 1000;
         animation: scaleIn 0.25s ease-out forwards;
         display: flex;
@@ -45,7 +44,6 @@
       flex-direction: column;
       gap: var(--space-x);
       width: 100%;
-      overflow-y: auto;
     }
       
     &_footer {
